# clog

./: CMakeLists.txt
clog/: clog.cpp
include/: clog.h
